WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61385
Interpreter crashes with gc validation enabled due to failure to mark initial cache structure
https://bugs.webkit.org/show_bug.cgi?id=61385
Summary
Interpreter crashes with gc validation enabled due to failure to mark initial...
Oliver Hunt
Reported
2011-05-24 12:30:07 PDT
Interpreter crashes with gc validation enabled due to failure to mark initial cache structure
Attachments
Patch
(2.60 KB, patch)
2011-05-24 12:33 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-05-24 12:33:40 PDT
Created
attachment 94666
[details]
Patch
Oliver Hunt
Comment 2
2011-05-24 12:40:07 PDT
Committed
r87190
: <
http://trac.webkit.org/changeset/87190
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug